# python-fastapi-boilerplate-simple

./: LICENSE  README.md  pyproject.toml
